# python-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
src/: main.py
tests/: test_main.py  test_my_project.py
